<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddOrEditNoteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/saveImageView"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:contentDescription="@string/note_save"
                android:focusable="true"
                android:padding="8dp"
                android:src="@drawable/ic_save" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/note_title"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        android:textStyle="bold"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/textEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:hint="@string/note_text"
        android:importantForAutofill="no"
        android:inputType="text|textMultiLine"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:textSize="18sp"
        android:textStyle="normal" />
</LinearLayout>